Minor commit: Ensure there is a gap between cameras when on multiple rows

--- a/views/assets/css/playback.css
+++ b/views/assets/css/playback.css
@@ -42,6 +42,8 @@ body.zm .ui-dialog .ui-dialog-content { padding: 0; }
   -webkit-box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.4);
   box-shadow: 0px 0px 10px 1px rgba(255, 255, 255, 0.4);
   border-radius: 6px;
+  margin-top: 10px;
+  margin-top: 0.625rem;
 }
 
 .monitor-stream-image {
